# the-very-deterministic-clerk

./: .gitignore  LICENSE  README.md  agent.py  ecom_bootstrap.py  ecom_domain_tools.py  ecom_guards.py  ecom_llm_loop.py  ecom_parsers.py  ecom_policy_index.py  ecom_task_classifier.py  main.py  pyproject.toml
config/: numeric_constraints.json  property_aliases.json  store_aliases.json
ecom_solvers/: __init__.py  checkout.py  discounts.py  payments_3ds.py  read_only.py  refunds.py  security.py
tests/: test_ecom_bootstrap.py  test_ecom_checkout_solver.py  test_ecom_discount_solver.py  test_ecom_domain_tools.py  test_ecom_guards.py  test_ecom_llm_loop.py  test_ecom_main_runner.py  test_ecom_parsers.py  test_ecom_payments_3ds_solver.py  test_ecom_policy_index.py  test_ecom_read_only.py  test_ecom_refund_solver.py  test_ecom_security_solvers.py  test_ecom_task_classifier.py
